plugins {
    id 'java'
    id 'application'
}

group = 'layers'
version = '1.0-SNAPSHOT'

ext {
    javaMainClass = 'layers.presentation.Main'
}

application {
    mainClassName = javaMainClass
}

jar {
    manifest {
        attributes 'Main-Class': javaMainClass
    }
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(22)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // this is just an example of importing an external library, you do not need to use it in your project
    testImplementation group: 'junit', name: 'junit', version: '4.12'
    testImplementation group: 'org.mockito', name: 'mockito-core', version: '4.9.0'
}

run {
    standardInput = System.in
}
